create section  DUVIDAS

--- a/conhecer/conhecer.html
+++ b/conhecer/conhecer.html
@@ -291,57 +291,214 @@
 
     <!-- ASSINAR-PLANOS -->
     <section class="assinar-planos">
-            <div class="text-planos">
-                <h2>Assine agora seu <strong>plano Smart Fit Coach</strong>
-                </h2>
+        <div class="text-planos">
+            <h2>Assine agora seu <strong>plano Smart Fit Coach</strong>
+            </h2>
+        </div>
+        <div class="container-planos">
+            <div class="imgs-planos">
+                <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/75bac3f3-group-187_106c020000000000000028.png"
+                    alt="">
             </div>
-            <div class="container-planos">
-                <div class="imgs-planos">
-                    <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/75bac3f3-group-187_106c020000000000000028.png" alt="">
-                </div>
-                <div class="text-li">
-                    <li>12 consultas online com o coach
-                    </li>
-                    <li>Treinos personalizados
-                    </li>
-                    <li>Chat ilimitado com o professor
-                    </li>
-                </div>
-                <div class="dolar">
-                    <p>R$  <strong>39</strong></p>
-                    <div class="valor">
-                        <p>,90 / <span>mes</span></p>
-                        <span class="anual">No plano anual</span>
-                    </div>
+            <div class="text-li">
+                <li>12 consultas online com o coach
+                </li>
+                <li>Treinos personalizados
+                </li>
+                <li>Chat ilimitado com o professor
+                </li>
+            </div>
+            <div class="dolar">
+                <p>R$ <strong>39</strong></p>
+                <div class="valor">
+                    <p>,90 / <span>mes</span></p>
+                    <span class="anual">No plano anual</span>
                 </div>
             </div>
-            <div class="btn-quero-plano">
-                <a href="#"><span>Eu quero!</span></a>
-            </div>
+        </div>
+        <div class="btn-quero-plano">
+            <a href="#"><span>Eu quero!</span></a>
+        </div>
     </section>
 
     <!-- RESULTADOS -->
     <section class="resultados">
-            <div class="text-resultados">
-                <h2><strong>Foque</strong> nos resultados
-                </h2>
+        <div class="text-resultados">
+            <h2><strong>Foque</strong> nos resultados
+            </h2>
+        </div>
+        <div class="container-resultados">
+            <div class="img-resultados">
+                <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/b43bc3eb-rectangle-67-1_10c2084000000000000028.png"
+                    alt="">
             </div>
-            <div class="container-resultados">
-                <div class="img-resultados">
-                    <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/b43bc3eb-rectangle-67-1_10c2084000000000000028.png" alt="">
-                </div>
-                <div class="textos-resultados">
-                        <div class="result-text">
-                            <p>Chegue a um novo nível de treino, alcance mais resultados e transforme sua rotina fitness com a 
-                                <strong>consultoria online de treino Smart Fit Coach.</strong> Chegou a hora de ter um professor coach de academia com treino personalizado!
+            <div class="textos-resultados">
+                <div class="result-text">
+                    <p>Chegue a um novo nível de treino, alcance mais resultados e transforme sua rotina fitness com a
+                        <strong>consultoria online de treino Smart Fit Coach.</strong> Chegou a hora de ter um professor
+                        coach de academia com treino personalizado!
 
-                            </p>
-                            <div class="btn-quero-result">
-                                    <a href="#"><span>Eu quero!</span></a>
-                            </div>
-                        </div>
+                    </p>
+                    <div class="btn-quero-result">
+                        <a href="#"><span>Eu quero!</span></a>
+                    </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!-- DUVIDAS -->
+    <section class="duvidas">
+        <div class="title-duvidas">
+            <h2>Dúvidas frequentes
+            </h2>
+        </div>
+        <div class="container-duvidas">
+            <!-- 1 -->
+            <div class="itens-duvidas">
+                <h3>O que é o Smart Fit Coach?</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-chevron-down"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+                </svg>
+            </div>
+
+            <!-- 2 -->
+            <div class="itens-duvidas">
+                <h3>Como funciona o Smart Fit Coach?</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-chevron-down"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+                </svg>
+            </div>
+
+            <!-- 3 -->
+            <div class="itens-duvidas">
+                <h3>Qual é a periodicidade do atendimento exclusivo?</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-chevron-down"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+                </svg>
+            </div>
+
+            <!-- 4 -->
+            <div class="itens-duvidas">
+                <h3>Como funciona o período de 7 dias de garantia?</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-chevron-down"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+                </svg>
+            </div>
+
+            <!-- 5 -->
+            <div class="itens-duvidas">
+                <h3>Como faço a assinatura?</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-chevron-down"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+                </svg>
+            </div>
+
+            <!-- 6 -->
+            <div class="itens-duvidas">
+                <h3>Tem permanência mínima?</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-chevron-down"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+                </svg>
+            </div>
+
+            <!-- 7 -->
+            <div class="itens-duvidas">
+                <h3>Como faz o agendamento?</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-chevron-down"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+                </svg>
+            </div>
+
+            <!-- 8 -->
+            <div class="itens-duvidas">
+                <h3>Dá para desmarcar o agendamento?</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-chevron-down"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+                </svg>
+            </div>
+
+            <!-- 9 -->
+            <div class="itens-duvidas">
+                <h3>Como funcionam as chamadas de vídeo?</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-chevron-down"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+                </svg>
+            </div>
+
+            <!-- 10 -->
+            <div class="itens-duvidas">
+                <h3>Onde vejo meu treino?</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-chevron-down"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+                </svg>
+            </div>
+
+            <!-- 11 -->
+            <div class="itens-duvidas">
+                <h3>O que mais eu ganho com o Smart Fit Coach?</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-chevron-down"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+                </svg>
+            </div>
+
+            <!-- 12 -->
+            <div class="itens-duvidas">
+                <h3>Quem é meu consultor?</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-chevron-down"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+                </svg>
+            </div>
+
+            <!-- 13 -->
+            <div class="itens-duvidas">
+                <h3>Como faço para cancelar minha assinatura?</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-chevron-down"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+                </svg>
+            </div>
+            <div class="btn-quero-duvidas">
+                <a href="#"><span>Eu quero!</span></a>
+            </div>
+
+            <div class="linhas">
+                <span></span>
+            </div>
+
+            <div class="information">
+                <span>INFORMAÇÕES E CONDIÇÕES</span>
+                <p>* O preço da mensalidade não inclui taxas de adesão e manutenção anual. Pagamento mensal por débito automático em conta-corrente ou cartão de crédito. Confirma condições em www.smartfit.com.br/contratos</p>
+                <p>O preço mínimo pode variar entre os planos e as unidades. Consulte a relação de unidades em smartfit.com.br. Sujeito a alterações sem aviso prévio. Não aceitamos cheques. Pagamento em dinheiro deve ser feito à vista, direto na unidade, incluindo mensalidade do período de 12 meses, taxas de adesão e manutenções anuais vigentes. Imagens meramente ilustrativas.</p>
+            </div>
+        </div>
+
+
     </section>
 </body>
 
