create section footer-conhecer

--- a/conhecer/conhecer.html
+++ b/conhecer/conhecer.html
@@ -500,6 +500,27 @@
 
 
     </section>
+
+    <!-- FOOTER-CONHECER -->
+    <section class="footer-conhecer">
+        <div class="container-footer">
+            <div class="logo-footer">
+                <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/90aacb25-logo-smart-1_104801k000000000000028.png" alt="">
+            </div>
+            <div class="direitos">
+                <p>Smart Fit © 2024 - Todos os direitos reservados.
+
+                </p>
+            </div>
+            <div class="redes-social-footer">
+                <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/0081df08-group-1_1012014000000000000028.png" alt="">
+                <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/c2aeacc2-vector-4_1013014000000000000028.png" alt="">
+                <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/b92b8d32-vector-1-1_101i014000000000000028.png" alt="">
+                <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/e3fdeee9-vector-2-1_1011014000000000000028.png" alt="">
+                <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/c1259a62-vector-3-1_100w014000000000000028.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
