create section descubra

--- a/conhecer/conhecer.html
+++ b/conhecer/conhecer.html
@@ -20,9 +20,9 @@
         <div class="link-headers">
             <ul>
                 <li>
-                    <a href="#">Especialidades</a>
-                    <a href="#">Como funciona</a>
-                    <a href="#">Preço</a>
+                    <a href="#coach">Especialidades</a>
+                    <a href="#como-funciona">Como funciona</a>
+                    <a href="#assinar-planos">Preço</a>
                 </li>
             </ul>
         </div>
@@ -60,7 +60,7 @@
     </section>
 
     <!-- COACH -->
-    <section class="coach">
+    <section class="coach" id="coach">
         <div class="text-coach">
             <h2>Para quem é o <strong>Smart Fit Coach?</strong>
             </h2>
@@ -239,7 +239,7 @@
     </section>
 
     <!-- COMO-FUNCIONA -->
-    <section class="como-funciona">
+    <section class="como-funciona" id="como-funciona">
         <div class="container-funcionas">
             <div class="img-funcionas">
                 <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/25404f5b-escolher-profissional_109n0h3000000000000028.png"
@@ -290,7 +290,7 @@
     </section>
 
     <!-- ASSINAR-PLANOS -->
-    <section class="assinar-planos">
+    <section class="assinar-planos" id="assinar-planos">
         <div class="text-planos">
             <h2>Assine agora seu <strong>plano Smart Fit Coach</strong>
             </h2>
