--- a/smartfit/index.html
+++ b/smartfit/index.html
@@ -576,7 +576,7 @@
                 </div>
 
                 <div class="links-saiba-mais">
-                    <a href="#">
+                    <a target="_parent" href="/energeticos/energeticos.html">
                         saiba mais
                     </a>
                 </div>
