create section BEBIDAS

--- a/energeticos/energeticos.html
+++ b/energeticos/energeticos.html
@@ -1,17 +1,18 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+
     <link rel="stylesheet" href="/energeticos/css/energeticos.css">
     <title>ENERGETICOS</title>
 </head>
+
 <body>
-    
+
 
     <!-- HEADERS-CONHECER -->
     <section class="headers-conhecer">
@@ -41,17 +42,140 @@
                     <a href="#">conheca</a>
                 </div>
             </div>
-            <!-- <div class="img-descubra">
-                <img src="https://energy.smartfit.com.br/images/Header_DESK2.png"
-                    alt="">
-            </div> -->
+
         </div>
         <div class="text-p">
-            <p>O <strong>Smart Fit Energy</strong> é a nossa bebida esportiva, pronta para consumo: exatamente o que você precisava para melhorar a sua performance nos exercícios, somando sabor, nutrientes e resultado. São até 6 sabores para ajudar na sua rotina de treino.
+            <p>O <strong>Smart Fit Energy</strong> é a nossa bebida esportiva, pronta para consumo: exatamente o que
+                você precisava para melhorar a sua performance nos exercícios, somando sabor, nutrientes e resultado.
+                São até 6 sabores para ajudar na sua rotina de treino.
 
             </p>
             </p>
         </div>
     </section>
+
+    <!-- BEBIDAS -->
+    <section class="bebidas">
+        <div class="title-bebidas">
+            <h3>Bebida esportiva <br>
+                disponível nas categorias</h3>
+        </div>
+        <div class="container-bebidas">
+            <!-- 1 -->
+            <div class="itens-bebidas">
+                <img src="https://energy.smartfit.com.br/images/pre-liquido.png" alt="">
+                <span>Pré-Treino <br>
+                    Líquido</span>
+            </div>
+
+            <!-- 2 -->
+            <div class="itens-bebidas">
+                <img src="https://energy.smartfit.com.br/images/pre-liquido.png" alt="">
+                <span>Pré-Treino <br>
+                    Termogênico
+                </span>
+            </div>
+
+            <!-- 3 -->
+            <div class="itens-bebidas">
+                <img src="https://energy.smartfit.com.br/images/bcaa.png" alt="">
+                <span>BCAA</span>
+            </div>
+
+            <!-- 4 -->
+            <div class="itens-bebidas">
+                <img src="https://energy.smartfit.com.br/images/pos-iso.png" alt="">
+                <span>Pós-Treino <br>
+                    Isotônico</span>
+            </div>
+
+            <!-- 5 -->
+            <div class="itens-bebidas">
+                <img src="https://energy.smartfit.com.br/images/fibras.png" alt="">
+                <span>Fibras <br>
+                    e Vitaminas</span>
+            </div>
+        </div>
+        <div class="img-precos">
+            <img src="https://energy.smartfit.com.br/images/preco_desktop.png" alt="">
+        </div>
+        <div class="btn-bebidas">
+            <a href="#"><span>Assine já</span></a>
+        </div>
+        <div class="text-bebidas">
+            <p>Para tomar uma dose é só assinar seu plano, levar sua garrafa até uma máquina de Smart Fit Energy <br> e
+                escolher o sabor:
+            </p>
+        </div>
+        <div class="container-sabor">
+            <!-- 1 -->
+            <div class="itens-sabor">
+                <div class="img-sabor">
+                    <img src="https://energy.smartfit.com.br/images/Guarana-com-acai2.png" alt="">
+                    <h4>Guaraná com Açaí
+                    </h4>
+                </div>
+                <div class="sub-text">
+                    <span>Pré-Treino líquido <br>
+                        <p>+ 200mg de cafeína, 200mg de taurina
+                        </p>
+                    </span>
+                </div>
+                <div class="sub-p">
+                    <p>Acelere seu metabolismo e seu desempenho com uma dose antes de treinar;
+
+                    </p>
+                    <p>Aumente a resistência física e diminua a fadiga muscular.
+
+                    </p>
+                </div>
+            </div>
+
+            <!-- 2 -->
+            <div class="itens-sabor  itens-sabor2">
+                <div class="img-sabor img-sabor2">
+                    <img src="https://energy.smartfit.com.br/images/tangerina-limao-morango.png" alt="">
+                    <h4>Tangerina com Morango e Limão Siciliano
+                    </h4>
+                </div>
+                <div class="sub-text sub-text2">
+                    <span>Pré-Treino termogênico
+                    </span>
+                </div>
+                <div class="sub-p sub-p2">
+                    <p>Acelere seu metabolismo com uma dose antes de treinar;
+                    </p>
+                    <p>Turbine a queima de gordura.
+                    </p>
+                </div>
+                <div class="novo-sabor">
+                    <h4>. novo sabor</h4>
+                </div>
+            </div>
+
+             <!-- 3 -->
+             <div class="itens-sabor">
+                <div class="img-sabor">
+                    <img src="https://energy.smartfit.com.br/images/Maca-verde-e-kiwi2.png" alt="">
+                    <h4>Maçã verde com <br> kiwi
+                    </h4>
+                </div>
+                <div class="sub-text">
+                    <span>Fibras e Vitaminas
+                    </span>
+                </div>
+                <div class="sub-p">
+                    <p>Contribui para a saciedade e reduz a absorção de calorias;
+                    </p>
+                    <p>Melhora a função intestinal e previne a constipação.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
+
+    </section>
 </body>
+
 </html>
