create section DOSE-ENERGIA

--- a/energeticos/energeticos.html
+++ b/energeticos/energeticos.html
@@ -176,6 +176,31 @@
 
 
     </section>
+
+    <!-- DOSE-ENERGIA -->
+    <section class="dose-energia">
+            <div class="container-dose">
+                <div class="conteudo">
+                    <div class="title-dose">
+                        <h2>Garanta sua dose de <br> energia!
+                        </h2>
+                    </div>
+                    <div class="text-dose">
+                        <li>1º Mês Gratuito;
+                        </li>
+                        <li><span>Exclusivo para aluno Smart Fit;
+                        </span></li>
+                        <li><span>Compre agora no Totem, App Smart Fit,
+                        </span></li>
+                        <span>site ou diretamente na unidade.
+                        </span>
+                    </div>
+                    <div class="btn-dose">
+                        <a href="#"><span>Eu quero!</span></a>
+                    </div>
+                </div>
+            </div>
+    </section>
 </body>
 
 </html>
