create section LOCALIDADE

--- a/energeticos/energeticos.html
+++ b/energeticos/energeticos.html
@@ -201,6 +201,19 @@
                 </div>
             </div>
     </section>
+
+    <!-- LOCALIDADE -->
+    <section class="localidade">
+            <div class="containers-locais">
+                <div class="title-locais">
+                    <h2>Onde encontrar Smart Fit Energy?
+                    </h2>
+                </div>
+                <div class="inputs-locais">
+                    <input type="text" placeholder="CEP, Bairro ou Cidade">
+                </div>
+            </div>
+    </section>
 </body>
 
 </html>
