create section DOSE-EXTRA

--- a/energeticos/energeticos.html
+++ b/energeticos/energeticos.html
@@ -214,6 +214,31 @@
                 </div>
             </div>
     </section>
+
+    <!-- DOSE-EXTRA -->
+    <section class="dose-extra">
+        <div class="container-extra">
+            <div class="conteudo-extra">
+                <div class="title-extra">
+                    <h2>DOSE EXTRA Para <br> Assinantes
+                    </h2>
+                    <p>Para você que deseja aproveitar <br>
+                        mais de uma vez do Smart Fit Energy, <br>
+                        agora há a dose extra. <br>
+                        <strong>APROVEITE!</strong>*</p>
+                </div>
+                <div class="img-extra">
+                    <img src="https://energy.smartfit.com.br/images/preco-extra.png" alt="">
+                </div>
+            </div>
+            <div class="sub-extra">
+                    <P>*Dose extra é válido somente para assinantes ativos do Smart Fit Energy.
+
+                    </P>
+            </div>
+        </div>
+        
+    </section>
 </body>
 
 </html>
