create section NUTRICIONAL

--- a/energeticos/energeticos.html
+++ b/energeticos/energeticos.html
@@ -31,7 +31,7 @@
     </section>
 
     <!-- DESCUBRA -->
-    <section class="descubra">
+    <section class="descubra" id="descubra">
         <div class="container-descubra">
             <div class="text-descubra">
                 <h2>Experimente o melhor <br>
@@ -100,7 +100,7 @@
             <img src="https://energy.smartfit.com.br/images/preco_desktop.png" alt="">
         </div>
         <div class="btn-bebidas">
-            <a href="#"><span>Assine já</span></a>
+            <a href="#descubra"><span>Assine já</span></a>
         </div>
         <div class="text-bebidas">
             <p>Para tomar uma dose é só assinar seu plano, levar sua garrafa até uma máquina de Smart Fit Energy <br> e
@@ -153,8 +153,8 @@
                 </div>
             </div>
 
-             <!-- 3 -->
-             <div class="itens-sabor">
+            <!-- 3 -->
+            <div class="itens-sabor">
                 <div class="img-sabor">
                     <img src="https://energy.smartfit.com.br/images/Maca-verde-e-kiwi2.png" alt="">
                     <h4>Maçã verde com <br> kiwi
@@ -179,40 +179,40 @@
 
     <!-- DOSE-ENERGIA -->
     <section class="dose-energia">
-            <div class="container-dose">
-                <div class="conteudo">
-                    <div class="title-dose">
-                        <h2>Garanta sua dose de <br> energia!
-                        </h2>
-                    </div>
-                    <div class="text-dose">
-                        <li>1º Mês Gratuito;
-                        </li>
-                        <li><span>Exclusivo para aluno Smart Fit;
+        <div class="container-dose">
+            <div class="conteudo">
+                <div class="title-dose">
+                    <h2>Garanta sua dose de <br> energia!
+                    </h2>
+                </div>
+                <div class="text-dose">
+                    <li>1º Mês Gratuito;
+                    </li>
+                    <li><span>Exclusivo para aluno Smart Fit;
                         </span></li>
-                        <li><span>Compre agora no Totem, App Smart Fit,
+                    <li><span>Compre agora no Totem, App Smart Fit,
                         </span></li>
-                        <span>site ou diretamente na unidade.
-                        </span>
-                    </div>
-                    <div class="btn-dose">
-                        <a href="#"><span>Eu quero!</span></a>
-                    </div>
+                    <span>site ou diretamente na unidade.
+                    </span>
+                </div>
+                <div class="btn-dose">
+                    <a href="#"><span>Eu quero!</span></a>
                 </div>
             </div>
+        </div>
     </section>
 
     <!-- LOCALIDADE -->
     <section class="localidade">
-            <div class="containers-locais">
-                <div class="title-locais">
-                    <h2>Onde encontrar Smart Fit Energy?
-                    </h2>
-                </div>
-                <div class="inputs-locais">
-                    <input type="text" placeholder="CEP, Bairro ou Cidade">
-                </div>
+        <div class="containers-locais">
+            <div class="title-locais">
+                <h2>Onde encontrar Smart Fit Energy?
+                </h2>
             </div>
+            <div class="inputs-locais">
+                <input type="text" placeholder="CEP, Bairro ou Cidade">
+            </div>
+        </div>
     </section>
 
     <!-- DOSE-EXTRA -->
@@ -225,19 +225,46 @@
                     <p>Para você que deseja aproveitar <br>
                         mais de uma vez do Smart Fit Energy, <br>
                         agora há a dose extra. <br>
-                        <strong>APROVEITE!</strong>*</p>
+                        <strong>APROVEITE!</strong>*
+                    </p>
                 </div>
                 <div class="img-extra">
                     <img src="https://energy.smartfit.com.br/images/preco-extra.png" alt="">
                 </div>
             </div>
             <div class="sub-extra">
-                    <P>*Dose extra é válido somente para assinantes ativos do Smart Fit Energy.
+                <P>*Dose extra é válido somente para assinantes ativos do Smart Fit Energy.
 
-                    </P>
+                </P>
             </div>
         </div>
-        
+
+    </section>
+
+    <!-- NUTRICIONAL -->
+    <section class="nutricional">
+        <div class="container-nutricional">
+            <div class="imgs-one">
+                <img src="https://energy.smartfit.com.br/images/Tela-da-maquinaII1.jpg" alt="">
+            </div>
+            <div class="tabela">
+                <p>Consuma antes, durante
+                    ou depois da atividade física.
+
+                </p>
+                <p>O Smart Fit Energy te ajuda a
+                    chegar mais longe no seu treino e mais perto dos seus resultados!</p>
+                <strong>Confira a Tabela
+                    Nutricional <br> Completa:
+                    </strong>
+                    <div class="btn-tabela">
+                        <a href="#"><span>Acesse a Tabela</span></a>
+                    </div>
+            </div>
+            <div class="imgs-two">
+                <img src="" alt="">
+            </div>
+        </div>
     </section>
 </body>
 
