create section DUVIDAS FREQUENTES

--- a/energeticos/energeticos.html
+++ b/energeticos/energeticos.html
@@ -261,8 +261,26 @@
                         <a href="#"><span>Acesse a Tabela</span></a>
                     </div>
             </div>
-            <div class="imgs-two">
-                <img src="" alt="">
+        </div>
+    </section>
+
+    <!-- DUVIDAS-FREQUENTES -->
+    <section class="duvidas-frequentes">
+        <div class="container-frequentes">
+            <div class="title-frequentes">
+                <h2>Dúvidas frequentes
+                </h2>
+                <div class="btn-frequente">
+                    <a href="#"><span>Acesse nosso faq</span></a>
+                </div>
+            </div>
+            <div class="info-frequente">
+                <span>INFORMACÕES E CONDIÇÕES
+
+                </span>
+                <p>Smart Fit Energy tem um valor a partir de R$19,90, que será cobrado junto com sua mensalidade de seu plano smartfit. O adicional não se aplica a planos com a condição de pagamento à vista. Sujeito alteração de valores após 12 meses. O preço de manutenção anual e taxa de adesão não se aplica ao adicional. Consulte a disponibilidade do produto Smart Fit Energy em sua unidade.
+
+                </p>
             </div>
         </div>
     </section>
