create section HEADERS-BODY

--- a/energeticos/energeticos.html
+++ b/energeticos/energeticos.html
@@ -39,7 +39,7 @@
                 </h2>
                 <img src="https://energy.smartfit.com.br/images/logo-energy.png" alt="">
                 <div class="btn-assinar">
-                    <a href="#">conheca</a>
+                    <a href="#bebidas">conheca</a>
                 </div>
             </div>
 
@@ -55,7 +55,7 @@
     </section>
 
     <!-- BEBIDAS -->
-    <section class="bebidas">
+    <section class="bebidas" id="bebidas">
         <div class="title-bebidas">
             <h3>Bebida esportiva <br>
                 disponível nas categorias</h3>
@@ -260,6 +260,9 @@
                     <div class="btn-tabela">
                         <a href="#"><span>Acesse a Tabela</span></a>
                     </div>
+            </div>
+            <div class="img-two">
+                
             </div>
         </div>
     </section>
