--- a/smartfit/index.html
+++ b/smartfit/index.html
@@ -267,7 +267,7 @@
                         alt="">
                 </div>
                 <div class="links-treino">
-                    <a href="#">body combat</a>
+                    <a  href="#">body combat</a>
                 </div>
                 <div class="duration">
                     <div class="itens-duration">
@@ -604,7 +604,7 @@
                 </div>
 
                 <div class="links-saiba-mais">
-                    <a href="#">
+                    <a target="_parent" href="/body/body.html">
                         saiba mais
                     </a>
                 </div>
